@startuml
title Time Deposit - Entity Relationship Diagram

hide circle
skinparam linetype ortho

entity "timeDeposits" as timeDeposits {
    * id : INTEGER <<PK>>
    --
    * planType : VARCHAR
    * days : INTEGER
    * balance : DECIMAL
}

entity "withdrawals" as withdrawals {
    * id : INTEGER <<PK>>
    --
    * timeDepositId : INTEGER <<FK>>
    * amount : DECIMAL
    * date : DATE
}

entity "time_deposit_interest_accruals" as accruals {
    * time_deposit_id : INTEGER <<FK>>
    * accrual_period : VARCHAR(7)
    --
    * created_at : TIMESTAMP
    --
    * UNIQUE(time_deposit_id, accrual_period)
}

timeDeposits ||--o{ withdrawals : has
timeDeposits ||--o{ accruals : accrues

@enduml
